get rid of datalabs directory configuration bit

--- a/notebooks/cm4twc_demo.ipynb
+++ b/notebooks/cm4twc_demo.ipynb
@@ -1,32 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### **** Insert your first name and last name here ***** ###\n",
-    "modeller = 'firstname-lastname' \n",
-    "run_identifier = 'demo-run'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# command to make output directory\n",
-    "![ ! -d /data/demo-data/out-${modeller} ] && mkdir /data/demo-data/out-${modeller}"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# `cm4twc` demo"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
