fix typos and add one plotting step

--- a/notebooks/cm4twc_exercise2.ipynb
+++ b/notebooks/cm4twc_exercise2.ipynb
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Gather the input dataset required for the SurfaceLayerComponent of GR4J choosing the __only__ relevant ones in the list below:\n",
+    "9. Gather the input dataset required for the `SurfaceLayerComponent` of GR4J choosing the __only__ relevant ones in the list below:\n",
     "   - */data/demo-data/in/driving/chess_specific_humidity.nc*\n",
     "   - */data/demo-data/in/driving/chess_rainfall_flux.nc*\n",
     "   - */data/demo-data/in/driving/chess_wind_speed.nc*\n",
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. Gather the input dataset required for the `OpenWaterComponent` of RFM (using file */data/demo-data/in/driving/flow_accumulation.nc*)"
+    "10. Gather the input dataset required for the `OpenWaterComponent` of RFM (using file */data/demo-data/in/ancillary/chess_flow_accumulation.nc*)"
    ]
   },
   {
@@ -330,7 +330,7 @@
     "   - it runs on a 1km resolution (British National Grid)\n",
     "   - it is given the parameter values it needs\n",
     "   - it saves its records in *'/data/demo-data/out-yourfirstname-yourlastname'* (please replace first/lastname accordingly)\n",
-    "   - it records mean daily *subsurface_runoff* and maximum weekly *soil_water_stress*"
+    "   - it records daily mean *subsurface_runoff* __and__ 5-day maximum *soil_water_stress*"
    ]
   },
   {
@@ -351,7 +351,7 @@
     "   - it is given the parameter values it needs\n",
     "   - it is given the constant value it needs\n",
     "   - it saves its records in *'/data/demo-data/out-yourfirstname-yourlastname'* (please replace first/lastname accordingly)\n",
-    "   - it recors mean daily __and__ minimum weekly *outgoing_water_volume_transport_along_river_channel*"
+    "   - it records daily mean __and__ 5-day minimum *outgoing_water_volume_transport_along_river_channel*"
    ]
   },
   {
@@ -410,6 +410,20 @@
    "metadata": {},
    "source": [
     "20. Start your model simulation while resquesting restart snapshots every 60 days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "21. Using `cf` and `cfplot`, plot the last time step of the daily mean subsurface runoff produced the subsurface component."
    ]
   },
   {
