replace reference to old framework name

--- a/notebooks/unifhy_demo.ipynb
+++ b/notebooks/unifhy_demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# `cm4twc` demo"
+    "# `unifhy` demo"
    ],
    "metadata": {
     "collapsed": false
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cm4twc"
+    "import unifhy"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "source": [
     "## choose your components\n",
     "\n",
-    "A library of `cm4twc`-compliant components available at https://github.com/cm4twc-org"
+    "A library of `unifhy`-compliant components available at https://github.com/unifhy-org"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cm4twccontrib.artemis import SurfaceLayerComponent, SubSurfaceComponent"
+    "from unifhycontrib.artemis import SurfaceLayerComponent, SubSurfaceComponent"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cm4twccontrib.rfm import OpenWaterComponent"
+    "from unifhycontrib.rfm import OpenWaterComponent"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd = cm4twc.LatLonGrid.from_extent_and_resolution(\n",
+    "sd = unifhy.LatLonGrid.from_extent_and_resolution(\n",
     "    latitude_extent=(50, 60),\n",
     "    latitude_resolution=0.5,\n",
     "    longitude_extent=(-11, 3),\n",
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "td = cm4twc.TimeDomain.from_start_end_step(\n",
+    "td = unifhy.TimeDomain.from_start_end_step(\n",
     "    start=datetime(2016, 1, 1, 0, 0, 0),\n",
     "    end=datetime(2017, 1, 1, 0, 0, 0),\n",
     "    step=timedelta(hours=1),\n",
@@ -274,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_sl = cm4twc.DataSet(\n",
+    "ds_sl = unifhy.DataSet(\n",
     "    files=[\n",
     "        '/data/demo-data/in/driving/LWdown_WFDE5_CRU_*_v1.1.nc',\n",
     "        '/data/demo-data/in/driving/SWdown_WFDE5_CRU_*_v1.1.nc',\n",
@@ -353,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_ss = cm4twc.DataSet(\n",
+    "ds_ss = unifhy.DataSet(\n",
     "    files=[\n",
     "        '/data/demo-data/in/ancillary/saturated_hydraulic_conductivity.nc',\n",
     "        '/data/demo-data/in/ancillary/available_water_storage_capacity.nc',\n",
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_ow = cm4twc.DataSet(\n",
+    "ds_ow = unifhy.DataSet(\n",
     "    files='/data/demo-data/in/ancillary/rfm_iarea.nc',\n",
     "    name_mapping={\n",
     "        'RFM drainage area in cell counts (WFDEI)': 'i_area'\n",
@@ -632,7 +632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = cm4twc.Model(\n",
+    "model = unifhy.Model(\n",
     "    identifier=run_identifier,\n",
     "    config_directory=f'/data/demo-data/out-{modeller}',\n",
     "    saving_directory=f'/data/demo-data/out-{modeller}',\n",
