--- a/notebooks/unifhy_exercise2.ipynb
+++ b/notebooks/unifhy_exercise2.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `cm4twc` exercise 2\n",
+    "# `unifhy` exercise 2\n",
     "\n",
-    "For this exercise, you may find useful information in the [online documentation](https://cm4twc-org.github.io/cm4twc)"
+    "For this exercise, you may find useful information in the [online documentation](https://unifhy-org.github.io/unifhy)"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "source": [
     "### space\n",
     "\n",
-    "5. Define a __1km resolution__ space domain using the [`BritishNationalGrid`](https://cm4twc-org.github.io/cm4twc/api/methods/cm4twc.BritishNationalGrid.from_extent_and_resolution.html#cm4twc.BritishNationalGrid.from_extent_and_resolution) over __Scotland__ \n",
+    "5. Define a __1km resolution__ space domain using the [`BritishNationalGrid`](https://unifhy-org.github.io/unifhy/api/methods/unifhy.BritishNationalGrid.from_extent_and_resolution.html#unifhy.BritishNationalGrid.from_extent_and_resolution) over __Scotland__ \n",
     "\n",
     "   (__hint:__ a region with eastings from 80km to 500km, and northings from 550km to 1000km includes Scotland, [see on a map](https://gridreferencefinder.com/#gr=JV0000000000|500000_s__c__s_1000000|1,NV8000050000|80000_s__c__s_550000|1,OV0000050000|500000_s__c__s_550000|1,HV8000000000|80000_s__c__s_1000000|1))\n",
     "   \n",
