--- a/notebooks/unifhy_solution_exercise1.ipynb
+++ b/notebooks/unifhy_solution_exercise1.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `cm4twc` exercise 1 (a solution)\n",
+    "# `unifhy` exercise 1 (a solution)\n",
     "\n",
-    "For this exercise, you may find useful information in the [online documentation](https://cm4twc-org.github.io/cm4twc)"
+    "For this exercise, you may find useful information in the [online documentation](https://unifhy-org.github.io/unifhy)"
    ]
   },
   {
@@ -22,14 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cm4twc"
+    "import unifhy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Reload your model from the demo run using [`cm4twc.Model.from_yaml(...)`](https://cm4twc-org.github.io/cm4twc/api/methods/cm4twc.Model.from_yaml.html#cm4twc.Model.from_yaml)\n",
+    "2. Reload your model from the demo run using [`unifhy.Model.from_yaml(...)`](https://unifhy-org.github.io/unifhy/api/methods/unifhy.Model.from_yaml.html#unifhy.Model.from_yaml)\n",
     "\n",
     "   (__hint:__ your YAML configuration file should be found in */data/demo-data/out-yourfirstname-yourlastname* and named *yourrunidentifier.yml*)"
    ]
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = cm4twc.Model.from_yaml('/data/demo-data/out-firstname-lastname/demo-run.yml')"
+    "model = unifhy.Model.from_yaml('/data/demo-data/out-firstname-lastname/demo-run.yml')"
    ]
   },
   {
