--- a/notebooks/unifhy_solution_exercise2.ipynb
+++ b/notebooks/unifhy_solution_exercise2.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `cm4twc` exercise 2 (a solution)\n",
+    "# `unifhy` exercise 2 (a solution)\n",
     "\n",
-    "For this exercise, you may find useful information in the [online documentation](https://cm4twc-org.github.io/cm4twc)"
+    "For this exercise, you may find useful information in the [online documentation](https://unifhy-org.github.io/unifhy)"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cm4twc"
+    "import unifhy"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cm4twccontrib.gr4 import SurfaceLayerComponent"
+    "from unifhycontrib.gr4 import SurfaceLayerComponent"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cm4twccontrib.gr4 import SubSurfaceComponent"
+    "from unifhycontrib.gr4 import SubSurfaceComponent"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cm4twccontrib.rfm import OpenWaterComponent"
+    "from unifhycontrib.rfm import OpenWaterComponent"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "source": [
     "### space\n",
     "\n",
-    "5. Define a __1km resolution__ space domain using the [`BritishNationalGrid`](https://cm4twc-org.github.io/cm4twc/api/methods/cm4twc.BritishNationalGrid.from_extent_and_resolution.html#cm4twc.BritishNationalGrid.from_extent_and_resolution) over __Scotland__ \n",
+    "5. Define a __1km resolution__ space domain using the [`BritishNationalGrid`](https://unifhy-org.github.io/unifhy/api/methods/unifhy.BritishNationalGrid.from_extent_and_resolution.html#unifhy.BritishNationalGrid.from_extent_and_resolution) over __Scotland__ \n",
     "\n",
     "   (__hint:__ a region with eastings from 80km to 500km, and northings from 550km to 1000km includes Scotland, [see on a map](https://gridreferencefinder.com/#gr=JV0000000000|500000_s__c__s_1000000|1,NV8000050000|80000_s__c__s_550000|1,OV0000050000|500000_s__c__s_550000|1,HV8000000000|80000_s__c__s_1000000|1))\n",
     "   \n",
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd = cm4twc.BritishNationalGrid.from_extent_and_resolution(\n",
+    "sd = unifhy.BritishNationalGrid.from_extent_and_resolution(\n",
     "    projection_x_coordinate_extent=(80e3, 500e3),\n",
     "    projection_x_coordinate_resolution=1e3,\n",
     "    projection_y_coordinate_extent=(550e3, 1000e3),\n",
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
-    "td_d = cm4twc.TimeDomain.from_start_end_step(\n",
+    "td_d = unifhy.TimeDomain.from_start_end_step(\n",
     "    start=datetime(2016, 10, 1, 9, 0, 0),\n",
     "    end=datetime(2017, 10, 1, 9, 0, 0),\n",
     "    step=timedelta(days=1)\n",
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "td_h = cm4twc.TimeDomain.from_start_end_step(\n",
+    "td_h = unifhy.TimeDomain.from_start_end_step(\n",
     "    start=datetime(2016, 10, 1, 9, 0, 0),\n",
     "    end=datetime(2017, 10, 1, 9, 0, 0),\n",
     "    step=timedelta(hours=1)\n",
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_sl = cm4twc.DataSet(\n",
+    "ds_sl = unifhy.DataSet(\n",
     "    ['/data/demo-data/in/driving/chess_rainfall_flux.nc',\n",
     "     '/data/demo-data/in/driving/chess_potential_water_evapotranspiration_flux.nc']\n",
     ")"
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_ow = cm4twc.DataSet(\n",
+    "ds_ow = unifhy.DataSet(\n",
     "    '/data/demo-data/in/ancillary/chess_flow_accumulation.nc',\n",
     "    name_mapping={\n",
     "        'flow accumulation': 'i_area'\n",
@@ -567,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = cm4twc.Model(\n",
+    "model = unifhy.Model(\n",
     "    identifier='exercise-run',\n",
     "    config_directory='/data/demo-data/out-firstname-lastname',\n",
     "    saving_directory='/data/demo-data/out-firstname-lastname',\n",
@@ -600,9 +600,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/conda/hj-38-nompi/lib/python3.8/site-packages/cm4twccontrib/rfm/openwater.py:150: RuntimeWarning: theta river surface not within [0, 1]\n",
+      "/data/conda/hj-38-nompi/lib/python3.8/site-packages/unifhycontrib/rfm/openwater.py:150: RuntimeWarning: theta river surface not within [0, 1]\n",
       "  warnings.warn(\n",
-      "/data/conda/hj-38-nompi/lib/python3.8/site-packages/cm4twccontrib/rfm/openwater.py:160: RuntimeWarning: theta land surface not within [0, 1]\n",
+      "/data/conda/hj-38-nompi/lib/python3.8/site-packages/unifhycontrib/rfm/openwater.py:160: RuntimeWarning: theta land surface not within [0, 1]\n",
       "  warnings.warn(\n",
       "/data/conda/hj-38-nompi/lib/python3.8/site-packages/numpy/ma/core.py:1021: RuntimeWarning: overflow encountered in multiply\n",
       "  result = self.f(da, db, *args, **kwargs)\n"
