update demo and exercises to work with `unifhy==0.1.0`

--- a/notebooks/unifhy_exercise2.ipynb
+++ b/notebooks/unifhy_exercise2.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## choose your components\n",
     "\n",
-    "2. Get the `SurfaceLayerComponent` from the GR4 model"
+    "2. Get the `SurfaceLayerComponent` from the SMART model"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Get the `SubSurfaceComponent` from the GR4 model"
+    "3. Get the `SubSurfaceComponent` from the SMART model"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Get the list of input data requirements for the `SurfaceLayerComponent` of GR4J"
+    "8. Get the list of input data requirements for the `SurfaceLayerComponent` of SMART"
    ]
   },
   {
@@ -164,7 +164,6 @@
    "metadata": {},
    "source": [
     "9. Gather the input dataset required for the `SurfaceLayerComponent` of GR4J choosing the __only__ relevant ones in the list below:\n",
-    "\n",
     "   - */data/demo-data/in/driving/chess_specific_humidity.nc*\n",
     "   - */data/demo-data/in/driving/chess_rainfall_flux.nc*\n",
     "   - */data/demo-data/in/driving/chess_wind_speed.nc*\n",
@@ -274,12 +273,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The parameter values to use for GR4 are as follow:\n",
+    "The parameter values to use for SMART are as follow:\n",
     "\n",
-    "   - $x_1 = 347 \\; kg.m^{-2}$\n",
-    "   - $x_2 = -0.0458 \\; kg.m^{-2}.d^{-1}$\n",
-    "   - $x_3 = 120 \\; kg.n^{-2}$\n",
-    "   - $x_4 = 0.938 \\; d$"
+    "   - $\\theta_T = 1.0$\n",
+    "   - $\\theta_C = 1.0$\n",
+    "   - $\\theta_H = 0.208$\n",
+    "   - $\\theta_D = 0.246$\n",
+    "   - $\\theta_S = 1.23 \\times 10^{-4}$\n",
+    "   - $\\theta_Z = 105 \\; kg.m^{-2}$\n",
+    "   - $\\theta_{SK} = 1.69 \\times 10^{5} \\; s$\n",
+    "   - $\\theta_{FK} = 1.14 \\times 10^{6} \\; s$\n",
+    "   - $\\theta_{GK} = 3.84 \\times 10^{6} \\; s$"
    ]
   },
   {
@@ -331,7 +335,7 @@
     "   - it runs on a 1km resolution (British National Grid)\n",
     "   - it is given the parameter values it needs\n",
     "   - it saves its records in *'/data/demo-data/out-yourfirstname-yourlastname'* (please replace first/lastname accordingly)\n",
-    "   - it records daily mean *subsurface_runoff* __and__ 5-day maximum *soil_water_stress*"
+    "   - it records daily mean *net_groundwater_flux_to_rivers* and 5-day maximum *soil_water_stress_for_transpiration*"
    ]
   },
   {
