gmd-2021-419: add data to run notebooks [R2C7]
also modifies notebooks accordingly (i.e. changed filepaths)

--- a/notebooks/unifhy_exercise2.ipynb
+++ b/notebooks/unifhy_exercise2.ipynb
@@ -164,11 +164,11 @@
    "metadata": {},
    "source": [
     "9. Gather the input dataset required for the `SurfaceLayerComponent` of GR4J choosing the __only__ relevant ones in the list below:\n",
-    "   - */data/demo-data/in/driving/chess_specific_humidity.nc*\n",
-    "   - */data/demo-data/in/driving/chess_rainfall_flux.nc*\n",
-    "   - */data/demo-data/in/driving/chess_wind_speed.nc*\n",
-    "   - */data/demo-data/in/driving/chess_air_temperature.nc*\n",
-    "   - */data/demo-data/in/driving/chess_potential_water_evapotranspiration_flux.nc*"
+    "   - *../data/chess_specific_humidity.nc*\n",
+    "   - *../data/chess_rainfall_flux.nc*\n",
+    "   - *../data/chess_wind_speed.nc*\n",
+    "   - *../data/chess_air_temperature.nc*\n",
+    "   - *../data/chess_potential_water_evapotranspiration_flux.nc*"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. Gather the input dataset required for the `OpenWaterComponent` of RFM (using file */data/demo-data/in/ancillary/chess_flow_accumulation.nc*)"
+    "10. Gather the input dataset required for the `OpenWaterComponent` of RFM (using file *../data/chess_flow_accumulation.nc*)"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12. Read in with `cf` the flow data */data/demo-data/in/ancillary/chess_flow_direction.nc* and assign it to the space domain you've created"
+    "12. Read in with `cf` the flow data *../data/chess_flow_direction.nc* and assign it to the space domain you've created"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13. Read in with `cf` the land sea mask data */data/demo-data/in/ancillary/chess_land_sea_mask.nc* and assign it to the space domain you've created"
+    "13. Read in with `cf` the land sea mask data *../data/chess_land_sea_mask.nc* and assign it to the space domain you've created"
    ]
   },
   {
@@ -315,7 +315,7 @@
     "   - it runs on a 1km resolution (British National Grid)\n",
     "   - it is given the data it needs\n",
     "   - it is given the parameter values it needs\n",
-    "   - it saves its records in *'/data/demo-data/out-yourfirstname-yourlastname'* (please replace first/lastname accordingly)"
+    "   - it saves its records in *'../outputs'*"
    ]
   },
   {
@@ -334,7 +334,7 @@
     "   - it runs at a daily timestep\n",
     "   - it runs on a 1km resolution (British National Grid)\n",
     "   - it is given the parameter values it needs\n",
-    "   - it saves its records in *'/data/demo-data/out-yourfirstname-yourlastname'* (please replace first/lastname accordingly)\n",
+    "   - it saves its records in *'../outputs'*\n",
     "   - it records daily mean *net_groundwater_flux_to_rivers* and 5-day maximum *soil_water_stress_for_transpiration*"
    ]
   },
@@ -355,7 +355,7 @@
     "   - it runs on a 1km resolution (British National Grid)\n",
     "   - it is given the parameter values it needs\n",
     "   - it is given the constant value it needs\n",
-    "   - it saves its records in *'/data/demo-data/out-yourfirstname-yourlastname'* (please replace first/lastname accordingly)\n",
+    "   - it saves its records in *'../outputs'*\n",
     "   - it records daily mean __and__ 5-day minimum *outgoing_water_volume_transport_along_river_channel*"
    ]
   },
@@ -379,7 +379,7 @@
    "source": [
     "18. Put your three components together\n",
     "\n",
-    "   (__hint:__ use *'/data/demo-data/out-yourfirstname-yourlastname'* (please replace first/lastname accordingly) to store your configuration and outputs files, and use e.g. \"exercise-run\" for your model identifier)"
+    "   (__hint:__ use *'../outputs'* to store your configuration and outputs files, and use e.g. \"exercise-run\" for your model identifier)"
    ]
   },
   {
@@ -414,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20. Start your model simulation while resquesting restart snapshots every 60 days"
+    "20. Start your model simulation while requesting restart snapshots every 60 days"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "21. Using `cf` and `cfplot`, plot the last time step of the daily mean subsurface runoff produced the subsurface component."
+    "21. Using `cf` and `cfplot`, plot the last time step of the daily mean \"net groundwater flux to rivers\" recorded by the subsurface component."
    ]
   },
   {
