--- a/notebooks/unifhy_exercise1.ipynb
+++ b/notebooks/unifhy_exercise1.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "2. Reload your model from the demo run using [`unifhy.Model.from_yaml(...)`](https://unifhy-org.github.io/unifhy/api/methods/unifhy.Model.from_yaml.html#unifhy.Model.from_yaml)\n",
     "\n",
-    "   (__hint:__ your YAML configuration file should be found in */data/demo-data/out-yourfirstname-yourlastname* and named *yourrunidentifier.yml*)"
+    "   (__hint:__ your YAML configuration file should be found in *../outputs* and named *demo-run.yml*)"
    ]
   },
   {
